// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> closeModal should close the modal when the request was approved 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa gylckg"
    >
      <div
        class="sc-htpNat gcBzNf"
        style="max-height: 100px;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> closeModal should close the modal when there is no onRequestClose callback 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa gylckg"
    >
      <div
        class="sc-htpNat gcBzNf"
        style="max-height: 100px;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should not render the modal if it is closed 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay eeaXpE"
  >
    <div
      class="sc-bdVaJa gQMJB"
    >
      <div
        class="sc-htpNat gcBzNf"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render fullscreen modal with action bars 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa fullscreen gylckg"
    >
      <div
        class="sc-bwzfXH dvEnmx"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="sc-htpNat gcBzNf"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb irByDn"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render with actionBar and bottomActionBar 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa gylckg"
    >
      <div
        class="sc-bwzfXH dvEnmx"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="sc-htpNat gcBzNf"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb irByDn"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render without errors and pass extra props 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa gylckg"
      style="width: 210px;"
    >
      <div
        class="sc-htpNat gcBzNf"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should recalculate shadows and content height on props change 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW open-enter open-enter-active"
  >
    <div
      class="sc-bdVaJa gylckg open-enter open-enter-active"
    >
      <div
        class="sc-htpNat gcBzNf"
        style="max-height: 100px;"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should set bottom action bar shadow when the content was scrolled 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa gylckg"
    >
      <div
        class="sc-htpNat gcBzNf"
        style="max-height: 100px;"
      >
        <div
          data-testid="content"
        >
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb irByDn"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
